# bibtex-cleanse

./: LICENSE  README.md  pyproject.toml
bibtex_cleanse/: __init__.py  bibtex_parse.py  bibtex_write.py  cleanse.py  cli.py
data/: city.csv  conferences.csv  short.csv
