[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bibtex-cleanse"
version = "0.1.0"
description = "A tool to deeply cleanse and normalize the contents of bibtex files."
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Wei Song", email = "wsong83@gmail.com"}]

dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff"]

[project.scripts]
bibtex-cleanse = "bibtex_cleanse.cli:main"

[tool.setuptools.packages.find]
include = ["bibtex_cleanse*"]
